--- a/src/js/components/container/App.css
+++ b/src/js/components/container/App.css
@@ -13,7 +13,7 @@ body {
 }
 
 .notesBody {
-	margin-top: 20px;
+	margin-top: 1px;
 }
 
 .notesFooter {
@@ -35,8 +35,8 @@ body {
 	background: transparent;
 	border: none;
 	position: absolute;
-	top: 10px;
-	right: 10px;
+    top: 3px;
+    right: -2px;
 }
 
 .information-section {
@@ -53,4 +53,18 @@ hr.success {
 .label-container label {
 	width: 100%;
 	border-bottom: 1px solid #019875;
+}
+
+.notesHeader {
+    padding: 2px;
+}
+
+.notesBody {
+    padding: 16px;
+    padding-top: 4px;
+}
+
+.info-section {
+	color: black;
+	background: white
 }
