--- a/src/js/components/container/App.css
+++ b/src/js/components/container/App.css
@@ -36,7 +36,7 @@ body {
 	border: none;
 	position: absolute;
     top: 3px;
-    right: -2px;
+    right: 0px;
 }
 
 .information-section {
@@ -67,4 +67,22 @@ hr.success {
 .info-section {
 	color: black;
 	background: white
+}
+
+.buttonGastosForm {
+	position: fixed;
+    right: 15px;
+    bottom: 15px;
+    border: 0;
+    width: 50px;
+    height: 50px;
+	border-radius: 50px;
+	cursor: pointer;
+}
+
+.buttonGastosForm span {
+	font-size: 28px;
+	font-weight: 700;
+	position: relative;
+	top: -2px;
 }
